changed profile picture to jpg as .avif was not working

--- a/index.html
+++ b/index.html
@@ -154,10 +154,10 @@
             <li class="nav-item d-flex align-items-center" style="margin-top:120px;" >
               <!-- account picture -->
               <img
-                src="/account profile.avif"
+                src="/accountprofilepicture.jpg"
                 class="img-fluid"
                 alt=""
-                style="width: 40px; margin-left: -10px"
+                style="width: 40px; margin-left: -10px;border-radius:50%;"
               />
               <a
                 class="nav-link active fw-bold text-secondary"
