--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <li class="nav-item d-flex align-items-center" style="margin-top:120px;" >
               <!-- account picture -->
               <img
-                src="/accountprofilepicture.jpg"
+                src="accountprofilepicture.jpg"
                 class="img-fluid"
                 alt=""
                 style="width: 40px; margin-left: -10px;border-radius:50%;"
@@ -315,7 +315,7 @@
                     <span>
                       Item
                     </span>
-                    <img src="/caret icon.png" alt="" style="height: 20 px;width:20px">
+                    <img src="caret icon.png" alt="" style="height: 20 px;width:20px">
                   </div>
                 </th>
                 <!-- Price Header -->
