--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                     <span>
                       Price
                     </span>
-                    <img src="/caret icon.png" alt="" style="height: 20 px;width:20px">
+                    <img src="caret icon.png" alt="" style="height: 20 px;width:20px">
                   </div>
                 </th>
                 <!-- Stock Header -->
@@ -333,7 +333,7 @@
                     <span>
                       Stock
                     </span>
-                    <img src="/caret icon.png" alt="" style="height: 20 px;width:20px">
+                    <img src="caret icon.png" alt="" style="height: 20 px;width:20px">
                   </div>
                 </th>
                 <!-- Volume Header -->
@@ -342,7 +342,7 @@
                     <span>
                       volume
                     </span>
-                    <img src="/caret icon.png" alt="" style="height: 20 px;width:20px">
+                    <img src="caret icon.png" alt="" style="height: 20 px;width:20px">
                   </div>
                 </th>
                 <!-- Type Header -->
@@ -351,7 +351,7 @@
                     <span>
                       Type
                     </span>
-                    <img src="/caret icon.png" alt="" style="height: 20 px;width:20px">
+                    <img src="caret icon.png" alt="" style="height: 20 px;width:20px">
                   </div>
                 </th>
                 <!-- Rating Header -->
@@ -360,7 +360,7 @@
                     <span>
                       Rating
                     </span>
-                    <img src="/caret icon.png" alt="" style="height: 20 px;width:20px">
+                    <img src="caret icon.png" alt="" style="height: 20 px;width:20px">
                   </div>
                 </th>
                 
