added scrolling to table

--- a/index.html
+++ b/index.html
@@ -303,7 +303,8 @@
       </div>
 
       <!-- Product list  -->
-      <div class="container-fluid product-list-container" style="margin-bottom: 50px;">
+      <!-- overflow-x scroll to enable table scroll horizontally  -->
+      <div class="container-fluid product-list-container" style="margin-bottom: 50px;overflow-x:scroll">
         <div class="row">
           <table class="table table-responsive ">
             <!-- Product list header -->
